update specify tests, metadata data for bridge versions,